ENTREGA_P3_SEMANTICO/P3_MARCO_GARCIA_PABLO_ROIG/tests/invalid/03_invalid_record_without_init.lava
record Circle(float r);
Circle c;
